<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/coronavirus"
            />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virus"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvCocha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cocha"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCCocha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Casos Confirmados: "
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <EditText
                    android:id="@+id/etCasosCC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"
                    android:hint="@string/casosC"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSCocha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Casos Confirmados: "
                        android:layout_marginBottom="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <EditText
                            android:id="@+id/etCasosSC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorAccent"
                        android:hint="@string/casosSC"
                        />
                </LinearLayout>

        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvSanta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/santa"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCSC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Casos Confirmados: "
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <EditText
                    android:id="@+id/etCasosCSC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"
                    android:hint="@string/casosC"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSSC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Casos Confirmados: "
                        android:layout_marginBottom="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/etCasosSSC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorAccent"
                        android:hint="@string/casosSC"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvOruro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oruro"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Casos Confirmados: "
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <EditText
                    android:id="@+id/etCasosCO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"
                    android:hint="@string/casosC"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Casos Confirmados: "
                        android:layout_marginBottom="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/etCasosSO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorAccent"
                        android:hint="@string/casosSC"
                        />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/etConfirmados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:hint="@string/nro1"
                android:layout_marginRight="5dp"
                />

            <EditText
                android:id="@+id/etSospechosos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:hint="@string/nro2"
                android:layout_marginRight="5dp"
                />

            <EditText
                android:id="@+id/etCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:hint="@string/ciudad"
                android:layout_marginRight="5dp"
                />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/enviarVa"
                android:layout_marginRight="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/etNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:hint="@string/busqueda"
            />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            />

    </LinearLayout>

</LinearLayout>
